--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
     - duck-typing: python-typehints/duck-typing.md
     - defining-generics: python-typehints/defining-generics.md
     - type-aliases: python-typehints/type-aliases.md
+    - type-variable-bounds-and-constraints: python-typehints/type-variable-bounds-and-constraints.md
 theme:
   name: material
   palette:
