--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - type-variable-bounds-and-constraints: python-typehints/type-variable-bounds-and-constraints.md
   - wip-hints:
     - introduction: wip-hints/index.md
+    - duck-typing: wip-hints/duck-typing.md
 theme:
   name: material
   palette:
